fix some layout issues

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -147,6 +147,10 @@ body {
       [full-end];
 
     background-color: $color-secondary;
+
+    @include respond(phone) {
+      grid-template-columns: 3rem 1fr 3rem;
+    }
   }
 }
 
