--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -11,6 +11,10 @@
     grid-column: 2 / 3;
     grid-row: 2 / 3;
 
+    @include respond(phone) {
+      grid-column: 1 / -1;
+      grid-row: 1 / -1;
+    }
     &--link {
       text-decoration: none;
       color: $color-grey-light-3;
